# rachel-ai

./: .dockerignore  .gitignore  LICENSE  Makefile  NOTICE  README.md  config.yaml  docker-compose.yml  pyproject.toml
docker/: Dockerfile.app  Dockerfile.train
docs/: config.md  getting_started.md  how_it_works.md  install.md  lan_setup.md
rachel-view/: README.md  index.html  package.json  tsconfig.scripts.json  vite.config.ts
rachel-view/scripts/: gen-config.ts
rachel-view/src/: App.tsx  sharedConfig.ts  styles.tsx  types.ts  utils.tsx
rachel-view/src/components/: AnalysisExits.tsx  AnalysisItem.tsx  DeepSearchModal.tsx  FeedStatus.tsx  ModalView.tsx  SegmentMetrics.tsx  Shimmer.tsx  SystemMetrics.tsx  TranscriptItem.tsx  TranscriptStream.tsx  TranscriptStreamSkeleton.tsx  TranscriptUserSearch.tsx  UserSearchContent.tsx  UserSearchText.tsx
rachel-view/src/context/: DeepContext.tsx  SegmentContext.tsx  UIContext.tsx
src/rachel/: deep_llm.py  emit.py  semantic_filter.py  shallow_llm.py  transcription.py
src/rachel/api/: deep_search.py  main.py  metrics.py  pubsub.py  start_stop.py  stream.py  user_search.py  voice_stream.py
src/rachel/core/: config.py  model.py  types.py
src/rachel/runtime/: runtime.py  threads.py
src/rachel/scripts/: export_fe_config.py
src/rachel/utils/: common.py  file_system.py  hardware.py  metrics.py  print_out.py  prompts.py
src/training/: README.md  accelerate_config.yaml  check_training_files.py  generate_deep_data  gpt_to_training.py  run  train_hf.py  update_prompts.py  wave_to_whisper.py  whisper_to_gpt.py
(+25 files in other folders)
